--- a/tutorials/tutorial_header.css
+++ b/tutorials/tutorial_header.css
@@ -10,10 +10,12 @@ header img {
 header nav
 {
   background-color: #3498db;
-	font-size: 12px;
-	display:inline-block;
-	width:100vw;
+  /* font-size: 12px; */
+  font-size: 80%;
+  display:inline-block;
+  width: calc(100vw - 80px);
 }
+
 header nav span
 {
 	cursor:default;
